--- a/style.css
+++ b/style.css
@@ -109,3 +109,48 @@ ul {
 .card-large .card-container .card-content:first-child {
   border-right: 1px solid #111;
 }
+
+.table {
+  margin: 40px;
+  width: 642px;
+  height: 450px;
+  padding: 30px;
+  background: #ffffff;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+
+  text-align: left;
+}
+
+.table h5 {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.table table th {
+  border-bottom: 1px solid #5e5e5e;
+  padding: 10px 0;
+}
+.table table td {
+  border-bottom: 1px solid #e9e9e9;
+  padding: 10px 0;
+}
+
+.table table {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.content-info {
+  display: flex;
+}
+
+.chart {
+  display: flex;
+  align-items: center;
+  width: 400px;
+  height: 450px;
+  background: #ffffff;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+}
